# pal_mjlab

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  analyze_50_resets.py  analyze_obs.py  entity_debug.xml  evaluate_policy.py  mujoco_warp_io.patch  npz_starting_pose.py  obs_ranges.txt  onnx_starting_pose.py  play_and_print.py  pretrained_backbone.pth  pretrained_convnext.pth  print_obs.py  pyproject.toml  talos_dancing.csv  tiago_pro_vision_task_spec.md  training_report.md  verify_obs.py  yolo_wrapper.py
.claude/: settings.local.json
.github/workflows/: ci.yaml
2026-06-01_18-39-57/: 2026-06-01_18-39-57.onnx
2026-06-01_18-39-57/git/: pal_mjlab.diff
2026-06-01_18-39-57/params/: agent.yaml  env.yaml
motions/: Bachata.csv  Bachata2.csv  Ballet.csv  DanceG1Test_2.csv  DanceG1Test_3.csv  DanceTest.csv  EgyptianDance.csv  Flamenco.csv  Guitar30s.csv  HandsUpDance.csv  HipHop.csv  IdleKanga.csv  Jump3_NA.csv  Jump_High.csv  Jump_High_Fixed.csv  Jump_High_Good.csv  Jump_kanga.csv  SalsaShine.csv  SalsaShines.csv  SquatOnce.csv  TESTPRIMI.csv  TESTPRIMI_point1.csv  TESTPRIMI_point2.csv  WalkingKimodo.csv  WalkingKimodoFormatted.csv  chicken.csv  country.csv  disco.csv  hiphop_long.csv  jump_lb.csv  kang_fall.csv  kang_walk.csv  kang_walk_simple.csv  kang_walk_vel.csv  kang_walk_vel_2.csv  kang_walk_vel_3.csv  pirouette.csv  salsa.csv  samba.csv  talos_fall.csv  (+2 more)
scratch/: check_actuator_order.py  check_obs.py  collect_occlusion_data.py  collect_pretrain_data.py  debug_perception.py  debug_spatial.py  export_onnx.py  find_critical_configurations.py  get_actuator_names.py  get_true_mapping.py  inspect_fingertips.py  inspect_onnx.py  occlusion_analysis_stats.csv  pretrain.py  pretrain_data.pt  pretrain_kp_pos.py  pretrain_pos.py  save_images.py  test_camera.py  test_cnn.py  test_kp_pos.py  test_pos.py  train_cnn.py  train_rl.py  visualize.py  visualize_keypoints.py
scripts/: collect_rewards.py  evaluate_policy.py  export_onnx.py  generate_training_report.py  list_envs.py  log_run.py  play.py  play_and_print.py  train.py  zero_agent.py
scripts/rl/: play.py  train.py
src/mjlab_kangaroo/: __init__.py
src/mjlab_kangaroo/robots/: __init__.py
src/mjlab_kangaroo/scripts/: list_envs.py  play.py  train.py
src/pal_mjlab/: __init__.py
src/pal_mjlab/docs/: conf.py  index.rst  installation.rst
src/pal_mjlab/dp_models/: model1.pt  model2.pt
src/pal_mjlab/rl/: __init__.py  config.py  flash_sac_runner.py
src/pal_mjlab/robots/: README.md  __init__.py  config.yaml  model_manager.py
src/pal_mjlab/scripts/: csv_to_npz.py  launcher.py  list_envs.py  (+6 more)
tests/: conftest.py  test_dual_band_velocity_command.py  test_kangaroo_tracking_rewards.py  test_kangaroo_velocity_rewards.py
train_with_vision_stuff/: pretrained_backbone.pth
wandb/: latest-run
wandb/run-20250923_185018-4viejg6s/: run-4viejg6s.wandb
wandb/run-20250923_185030-6dc4l18y/: run-6dc4l18y.wandb
wandb/run-20250923_185300-c5imb8pk/: run-c5imb8pk.wandb
wandb/run-20250923_185345-xo23v7f4/: run-xo23v7f4.wandb
wandb/run-20250923_185515-n8jwokca/: run-n8jwokca.wandb
wandb/run-20250923_190102-oexfm7j8/: run-oexfm7j8.wandb
wandb/run-20250923_190352-venqymrp/: run-venqymrp.wandb
wandb/run-20250923_190718-rt7es6p0/: run-rt7es6p0.wandb
wandb/run-20250923_190922-q491kjx0/: run-q491kjx0.wandb
(+504 files in other folders)
