[project]
name = "pal-mjlab"
version = "0.1.0"
description = "PAL Robotics' robots in mjlab "
readme = "README.md"
authors = [
    { name = "Louis Le Lay", email = "louislelay@pal-robotics.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "mjlab>=1.5.0",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.4",
]

[tool.ruff]
indent-width = 2
src = ["pal_mjlab"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[project.entry-points."mjlab.tasks"]
pal_mjlab = "pal_mjlab.tasks"
