[project]
name = "pal-mjlab"
version = "0.1.0"
description = "PAL Robotics' robots in mjlab "
readme = "README.md"
authors = [
    { name = "Louis Le Lay", email = "louislelay@pal-robotics.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "mjlab>=1.5.1",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "pytest>=v9.0.3",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.4",
]

[project.optional-dependencies]
cu128 = ["torch>=2.7.0"]
cpu = ["torch>=2.7.0"]

[tool.uv]
conflicts = [
  [{extra = "cu128"}, {extra = "cpu"}],
]

[tool.ruff]
indent-width = 2
src = ["pal_mjlab"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[project.entry-points."mjlab.tasks"]
pal_mjlab = "pal_mjlab.tasks"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:torch.jit._script",
]
