[project]
name = "pal-mjlab"
version = "0.1.0"
description = "PAL Robotics' robots in mjlab "
readme = "README.md"
authors = [
    { name = "Louis Le Lay", email = "louislelay@pal-robotics.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "mjlab>=1.5.2",
    "moviepy>=2.0",
    "onnxruntime<1.24",
    "opencv-python>=5.0.0.93",
    "setuptools<82",
    "ultralytics>=8.4.93",
]

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "pytest>=v9.0.3",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.4",
]

[project.optional-dependencies]
cu128 = ["torch>=2.7.0"]
cpu = ["torch>=2.7.0"]

[tool.uv]
conflicts = [
  [{extra = "cu128"}, {extra = "cpu"}],
]
# moviepy 2.x caps pillow at <12 while mjviser (via mjlab) needs >=12.2.
# The cap is precautionary; moviepy works with pillow 12, so lift it.
override-dependencies = ["pillow>=12.2.0"]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "extra == 'cu128' and sys_platform == 'linux'" }
]
torchvision = [
  { index = "pytorch-cu129", marker = "extra == 'cu128' and sys_platform == 'linux'" }
]


[tool.ruff]
indent-width = 2
src = ["pal_mjlab"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[project.entry-points."mjlab.tasks"]
pal_mjlab = "pal_mjlab.tasks"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:torch.jit._script",
]
